# rust-lambda

./: .gitignore  README.md  build-function.sh  cdk.json  package.json  tsconfig.json  ubuntu-config
.github/: renovate.json
.github/workflows/: main.yml
lib/: rust-lambda-stack.ts
resources/: Cargo.toml
resources/src/: main.rs
test/: rust-lambda.test.ts
