[package]
authors = ["Ryan"]
edition = "2018"
name = "resources"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.11.0"
log = "0.4.20"
serde_json = "1.0.113"
simple_logger = "2.3.0"
tokio = {version = "1.36.0", features = ["full"]}

[[bin]]
name = "bootstrap"
path = "src/main.rs"
